# mypy-typing-asserts

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: PR.yml
mypy_typing_asserts/: __init__.py  mypy_plugin.py
tests/: test_mypy_typing_asserts.py  test_typing_asserts.py
typing_asserts/: __init__.py  mypy_plugin.py
